--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.4.0",
+    "@mui/x-date-pickers": "^6.4.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -26,6 +28,7 @@
     "eslint-config-next": "13.4.1",
     "humps": "^2.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
